# oscore_nrf9151_app

./: .gitignore  CMakeLists.txt  Kconfig  README.md  env.sh  prj.conf  sysbuild.conf  west.yml
src/: main.c  network.c  network.h
